--- a/angular.json
+++ b/angular.json
@@ -19,7 +19,10 @@
             "polyfills": ["zone.js"],
             "tsConfig": "tsconfig.app.json",
             "assets": ["src/assets"],
-            "styles": ["src/styles.css"],
+            "styles": [
+              "src/styles.css",
+              "node_modules/@ngneat/hot-toast/src/styles/styles.css"
+            ],
             "scripts": []
           },
           "configurations": {
@@ -70,7 +73,10 @@
             "polyfills": ["zone.js", "zone.js/testing"],
             "tsConfig": "tsconfig.spec.json",
             "assets": ["src/assets"],
-            "styles": ["src/styles.css"],
+            "styles": [
+              "src/styles.css",
+              "node_modules/@ngneat/hot-toast/src/styles/styles.css"
+            ],
             "scripts": []
           }
         }
